# pyredsql

./: .gitignore  LICENSE  README.md  pyproject.toml
pyredsql/: __init__.py  cli.py  config.py  detector.py  errors.py  extractor.py  formatter.py  models.py  rewriter.py
tests/: test_detector.py  test_extract_command.py  test_format_command.py  test_formatter.py  test_list_command.py
tests/fixtures/redshift/: copy.py  f_string.py  jinja.py  qualify.py  simple_select.py  unload.py  with.py  with_qualify.py
website/: docusaurus.config.ts
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
