[project]
name = "pyredsql"
version = "0.1.0"
description = "Format and extract Redshift SQL embedded in Python files."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "enumura1" },
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "sqlglot>=25",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8",
    "twine>=6",
]

[project.scripts]
pyredsql = "pyredsql.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
